crates/cypher-syntax/tests/snapshots/syntax_snapshots__clause_create_node.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"CREATE (n:Person {name: 'Alice'})\")"
---
SOURCE_FILE@0..33
  STATEMENT@0..33
    CREATE_CLAUSE@0..33
      CREATE_KW@0..6 "CREATE"
      PATTERN@6..33
        PATTERN_PART@6..33
          NODE_PATTERN@6..33
            WHITESPACE@6..7 " "
            L_PAREN@7..8 "("
            NAME@8..9
              IDENT@8..9 "n"
            LABEL_EXPR@9..16
              COLON@9..10 ":"
              IDENT@10..16 "Person"
            PROPERTY_MAP@16..32
              WHITESPACE@16..17 " "
              L_BRACE@17..18 "{"
              IDENT@18..22 "name"
              COLON@22..23 ":"
              LITERAL_EXPR@23..31
                WHITESPACE@23..24 " "
                STRING_LITERAL@24..31 "'Alice'"
              R_BRACE@31..32 "}"
            R_PAREN@32..33 ")"
