crates/cypher-syntax/tests/snapshots/syntax_snapshots__clause_match_labeled_node.snap
---
source: crates/cypher-syntax/tests/syntax_snapshots.rs
assertion_line: 94
expression: "format_with_errors(\"MATCH (p:Person) RETURN p\")"
---
SOURCE_FILE@0..25
  STATEMENT@0..25
    MATCH_CLAUSE@0..16
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..16
        PATTERN_PART@5..16
          NODE_PATTERN@5..16
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "p"
            LABEL_EXPR@8..15
              COLON@8..9 ":"
              IDENT@9..15 "Person"
            R_PAREN@15..16 ")"
    RETURN_CLAUSE@16..25
      WHITESPACE@16..17 " "
      RETURN_KW@17..23 "RETURN"
      RETURN_BODY@23..25
        RETURN_ITEMS@23..25
          RETURN_ITEM@23..25
            VAR_EXPR@23..25
              WHITESPACE@23..24 " "
              IDENT@24..25 "p"
